water and upd user
