# swagger.json
@@ -375,18 +375,39 @@
 
       "SigninRequest": {
         "type": "object",
-        "required": ["email", "password"],
         "properties": {
-          "email": {
+          "token": {
             "type": "string",
-            "description": "User's email",
-            "format": "email",
-            "example": "john.doe123@example.com"
+            "description": "User's token"
           },
-          "password": {
-            "type": "string",
-            "description": "User's password",
-            "example": "3959876!Qgfdgf8"
+          "user": {
+            "type": "object",
+            "properties": {
+              "username": {
+                "type": "string",
+                "description": "User's name",
+                "example": "john.doe123"
+              },
+              "email": {
+                "type": "string",
+                "description": "User's email",
+                "format": "email",
+                "example": "john.doe123@example.com"
+              },
+              "avatarURL": {
+                "type": "string",
+                "description": "User's default avatar url",
+                "example": "http://res.cloudinary.com/ddbqgch8e/image/upload/v1713198540/avatars/azjfryjytat5cpdh9ix5.webp"
+              }
+            }
+          }
+        },
+        "example": {
+          "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2MWQxNDM3ODY3OTRmMjE4YjQ1MjdkYSIsImlhdCI6MTcxMzE4NTA1MCwiZXhwIjoxNzEzMjY3ODUwfQ.9cXV9QuhscFv9DKRjbzSkJLuAYgJyGV1CRD8uOPr5Fc",
+          "user": {
+            "username": "john.doe123",
+            "email": "john.doe123@example.com",
+            "avatarURL": "http://res.cloudinary.com/ddbqgch8e/image/upload/v1713198540/avatars/azjfryjytat5cpdh9ix5.webp"
           }
         }
       },
